[gd_scene load_steps=9 format=3 uid="uid://dpci6e7r2lk3g"]

[ext_resource type="Script" uid="uid://besr7qrqenwoe" path="res://Scripts/features/cart.gd" id="1_aph70"]
[ext_resource type="PackedScene" uid="uid://shc8io3dpohj" path="res://assets/blender/cart.blend" id="2_4bypq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_4bypq"]
size = Vector3(2, 1.18799, 1.5)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_840ae"]
points = PackedVector3Array(-1.11933, 0.0781258, -0.858211, -1.11933, 0.849229, -0.858211, -1.01712, 0.0781258, -0.858211, -1.11933, 0.0781258, 0.858211, -1.11454, 1.19362, -0.615768, -1.01712, 0.849229, -0.858211, -1.11933, 1.19362, 0, -1.01712, 0.0781258, 0.858211, -1.11933, 0.849229, 0.858211, -1.02193, 1.19362, -0.615768, -1.01712, 1.19362, 0, -1.11454, 1.19362, 0.6156, -1.01712, 0.849229, 0.858211, -1.02193, 1.19362, 0.6156)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_si56i"]
points = PackedVector3Array(0.987292, 0.0781258, -0.858211, 0.987292, 0.849192, -0.858211, 1.12779, 0.0781258, -0.858211, 0.987292, 0.0781258, 0.858211, 1.12779, 0.849192, -0.858211, 0.987292, 0.849192, 0.858211, 1.12779, 0.0781258, 0.858211, 1.12779, 0.849192, 0.858211)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_e0u2j"]
points = PackedVector3Array(0.987292, 0.849192, 0.858211, 0.987292, 0.849192, 0.753744, -1.01712, 0.849192, 0.858211, 0.987292, 0.0781258, 0.858211, 0.987292, 0.0781258, 0.753744, -1.01712, 0.849192, 0.753744, -1.01712, 0.0781258, 0.858211, -1.01712, 0.0781258, 0.753744)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_67217"]
points = PackedVector3Array(-1.01712, 0.0781258, -0.753744, -1.01712, 0.185922, -0.753744, 0.987292, 0.0781258, -0.753744, -1.01712, 0.0781258, 0.753744, -1.01712, 0.185922, 0.753744, 0.987292, 0.185922, -0.753744, 0.987292, 0.0781258, 0.753744, 0.987292, 0.185922, 0.753744)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_xa2nm"]
points = PackedVector3Array(0.987292, 0.849192, -0.753744, 0.987292, 0.849192, -0.858211, -1.01712, 0.849192, -0.753744, 0.987292, 0.0781258, -0.753744, 0.987292, 0.0781258, -0.858211, -1.01712, 0.849192, -0.858211, -1.01712, 0.0781258, -0.753744, -1.01712, 0.0781258, -0.858211)

[node name="RigidBody3D" type="RigidBody3D"]
mass = 10.0
script = ExtResource("1_aph70")
hover_height = 0.5

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
collision_layer = 2
collision_mask = 2
input_ray_pickable = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.743994, 0)
shape = SubResource("BoxShape3D_4bypq")

[node name="cart" parent="." instance=ExtResource("2_4bypq")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, -2.13163e-14, 0, 1, 0, 2.13163e-14, 0, 1, -2.23517e-08, 0.460988, 1.1)
text = "100$"
font_size = 42

[node name="CollisionShape3D11" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_840ae")

[node name="CollisionShape3D12" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_si56i")

[node name="CollisionShape3D13" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_e0u2j")

[node name="CollisionShape3D14" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_67217")

[node name="CollisionShape3D15" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_xa2nm")

[node name="RayCast3D_Front" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, -1.1)
target_position = Vector3(0, -4, -1)

[node name="RayCast3D_Back" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 1.1)
target_position = Vector3(0, -4, 1)

[node name="RayCast3D_Left" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0.1, 0)
target_position = Vector3(0, -5, 0)

[node name="RayCast3D_Right" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, 0.1, 0)
target_position = Vector3(0, -5, 0)

[editable path="cart"]
